@@ -21,6 +21,8 @@ MOD_FINDER_FIELDSET_ADVANCED_FIELD_SIZE_DESCRIPTION="The width of the search fie
 MOD_FINDER_FIELDSET_ADVANCED_FIELD_SIZE_LABEL="Search Field Size"
 MOD_FINDER_FIELDSET_ADVANCED_LABEL_POS_DESCRIPTION="The position of the search label relative to the search field."
 MOD_FINDER_FIELDSET_ADVANCED_LABEL_POS_LABEL="Label Position"
+MOD_FINDER_FIELDSET_ADVANCED_SETITEMID_DESCRIPTION="Assign an ItemID for the display of the search results if there is no com_finder menu and a specific display is desired. The ItemId may be chosen among those available through the Menu Manager. If you do not know what this means, you may not need it."
+MOD_FINDER_FIELDSET_ADVANCED_SETITEMID_LABEL="Set ItemID"
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_BUTTON_DESCRIPTION="Toggle whether a button should be displayed for the search form."
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_BUTTON_LABEL="Search Button"
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_LABEL_DESCRIPTION="Toggle whether a label should be displayed for the search field."
