@@ -22,13 +22,14 @@ class ModFinderHelper
 	 * Method to get hidden input fields for a get form so that control variables
 	 * are not lost upon form submission.
 	 *
-	 * @param   string  $route  The route to the page. [optional]
+	 * @param   string   $route      The route to the page. [optional]
+	 * @param   integer  $paramItem  The menu item ID. (@since 3.1) [optional]
 	 *
 	 * @return  string  A string of hidden input form fields
 	 *
 	 * @since   2.5
 	 */
-	public static function getGetFields($route = null)
+	public static function getGetFields($route = null, $paramItem = 0)
 	{
 		$fields = null;
 		$uri = JUri::getInstance(JRoute::_($route));
@@ -37,19 +38,21 @@ class ModFinderHelper
 
 		// Create hidden input elements for each part of the URI.
 		// Add the current menu id if it doesn't have one
-		$needId = true;
 		foreach ($elements as $n => $v)
 		{
-			$fields .= '<input type="hidden" name="' . $n . '" value="' . $v . '" />';
 			if ($n == 'Itemid')
 			{
-				$needId = false;
+				continue;
 			}
+			$fields .= '<input type="hidden" name="' . $n . '" value="' . $v . '" />';
 		}
-		if ($needId)
-		{
-			$fields .= '<input type="hidden" name="Itemid" value="' . JFactory::getApplication()->input->get('Itemid', '0', 'int') . '" />';
-		}
+
+		/*
+		 * Figure out the Itemid value
+		 * First, check if the param is set.  If not, fall back to the Itemid from the JInput object
+		 */
+		$Itemid = $paramItem > 0 ? $paramItem : JFactory::getApplication()->input->getInt('Itemid');
+		$fields .= '<input type="hidden" name="Itemid" value="' . $Itemid . '" />';
 
 		return $fields;
 	}
@@ -57,7 +60,7 @@ class ModFinderHelper
 	/**
 	 * Get Smart Search query object.
 	 *
-	 * @param   JRegistry object containing module parameters.
+	 * @param   JRegistry  $params  Module parameters.
 	 *
 	 * @return  FinderIndexerQuery object
 	 *
@@ -85,5 +88,4 @@ class ModFinderHelper
 
 		return $query;
 	}
-
 }
